# secretary

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PRD.md  README.md  buf.gen.frontend.yaml  docker-compose.yml  whatsappPRD.md
backend/: atlas.hcl  go.mod  go.sum  sqlc.yaml
backend/migrations/: 001_baseline.sql  002_add_todo_history.sql  20260126052726_test_change.sql  20260126055601_add_auth.sql  20260323120000_add_workspace_and_documents.sql  20260323123000_add_block_table.sql  20260323140000_canonical_todos.sql  20260323153000_rename_todo_statuses.sql  20260324100000_drop_block_status.sql  atlas.sum  (+7 more)
docs/: schema.md
frontend/: index.html  package.json  postcss.config.cjs
native/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
native/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
native/src-tauri/capabilities/: default.json
native/src-tauri/src/: lib.rs  main.rs  pomodoro.rs
tools/: scan_xiaomi_ble.py
tui/: main.py  old_main.py  pyproject.toml
tui/components/: analysis_modal.py  import_modal.py  rename_modal.py
tui/db/: connection.py  models.py  service.py
tui/recording/: audio_saver.py  recorder.py
tui/scripts/: convert_recordings_to_m4a.py
tui/services/: analysis_service.py  audio_files.py  azure_storage.py  deepgram_service.py  import_service.py  openai_client.py  speaker_identification.py  storage_manager.py  transcription_service.py
tui/ui/: main_app.py  recorder_widget.py  recording_detail_screen.py  recordings_list_widget.py  test_app.py
(+111 files in other folders)
