[project]
name = "secretary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pyaudio>=0.2.14",
    "textual>=6.1.0",
    "psycopg2-binary>=2.9.0",
    "tortoise-orm[asyncpg]>=0.25.1",
    "asyncpg>=0.30.0",
    "requests>=2.32.5",
    "dotenv>=0.9.9",
    "openai>=1.107.3",
]
