[package]
name = "secretary-native"
version = "0.1.0"
description = "Native outline editor for Secretary"
authors = ["OpenCode"]
edition = "2021"

[lib]
name = "secretary_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
